# Films_Repository

./: manage.py  package-lock.json  pyproject.toml
cinema_films/: asgi.py  settings.py  wsgi.py
films/: admin.py  forms.py  models.py  urls.py  views.py
films/migrations/: 0001_initial.py  0002_film_delete_films.py  0003_genre_alter_film_options_alter_film_description_and_more.py  0004_rename_name_film_title_rename_name_genre_genre_and_more.py
films/templates/: home.html  x.html
templates/: home.html
users/: admin.py  forms.py  models.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_phone.py
users/templates/registration/: login.html  register.html
